--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
               List of my GitHub repositories fetched using GitHub API
             </p>
 
-            <a class="btn btn-info"
+            <a
+              class="btn btn-info"
+              href="https://github.com/shafiqkhalili"
+              target="_blank"
               ><i
                 style="font-size: 1.5rem"
                 class="devicon-github-plain-wordmark colored"
