--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class="col-md-4 offset-md-1 mx-3 my-3">
             <!-- Featured image -->
             <div class="view overlay">
-              <img id="user-photo" src="" class="img-fluid" alt="User Avatar" />
+              <img id="user-photo" src="" class="img-fluid" alt="User Avatar" style="height: 150px;"/>
               <a>
                 <div class="mask rgba-white-slight"></div>
               </a>
